# syndrome_decoding_estimator

./: .gitignore  LICENSE.txt  Makefile  NOTICE.txt  README.md  estimate_code_based_nist_schemes.py  setup.py
C/: CMakeLists.txt  README.md  create_main.py
C/main/: CMakeLists.txt  constants.h  main.cpp
C/src/sd_estimator/: CMakeLists.txt  sd_ball_collision_optimizer.cpp  sd_ball_collision_optimizer.h  sd_bjmm_optimizer.cpp  sd_bjmm_optimizer.h  sd_both_may_depth_2.cpp  sd_both_may_depth_2.h  sd_dumer_optimizer.cpp  sd_dumer_optimizer.h  sd_estimator.cpp  sd_estimator.h  sd_helper.cpp  sd_helper.h  sd_may_ozerov_optimizer.cpp  sd_may_ozerov_optimizer.h  sd_optimizer.cpp  sd_optimizer.h  sd_stern_optimizer.cpp  sd_stern_optimizer.h
C/tests/sd_estimator/: CMakeLists.txt  test_sd_estimator.cpp  test_sd_estimator.h
Docs/source/: conf.py  index.rst
Docs/source/SyndromeDecodingEstimator/: estimator.rst
sd_estimator/: estimator.py  theoretical_estimates.py
